Closed Bug 1567861 Opened 5 years ago Closed 5 years ago

Fix BlocksRingBuffer:ClearBefore() with past-the-end index, that double-locks

Categories

(Core :: Gecko Profiler, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox70 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

If BlocksRingBuffer:ClearBefore() is called with a past-the-end BlockIndex, it calls Clear(), which attempts to lock the mutex again.
Also, it should return after that.

ClearBefore() with a past-the-end BlockIndex would call Clear(), which tries to
take the lock again! Also we didn't return after that.
Added corresponding test.

Pushed by gsquelart@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f82460e974f9
Fix BlocksRingBuffer::ClearBefore() with past-the-end BlockIndex - r=gregtatum
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: