mozglue/baseprofiler/public/BlocksRingBuffer.h
@@ -57,15 +57,15 @@ namespace mozilla {
 // index may later be used to get back to that particular entry if it still
 // exists.
 //
-// The caller may register a "deleter" function on creation, which will be
-// invoked on entries that are about to be removed, which may be:
+// The caller may register an "entry destructor" function on creation, which
+// will be invoked on entries that are about to be removed, which may be:
 // - Entry being overwritten by new data.
 // - When the caller is explicitly `Clear()`ing parts of the buffer.
 // - When the buffer is destroyed.
-// Note that this means the caller's provided deleter may be invoked from
-// inside of another of the caller's functions, so be ready for this
-// re-entrancy; e.g., the deleter should not lock a non-recursive mutex that
-// buffer-writing/clearing functions may also lock!
+// Note that this means the caller's provided entry destructor may be invoked
+// from inside of another of the caller's functions, so be ready for this
+// re-entrancy; e.g., the entry destructor should not lock a non-recursive mutex
+// that buffer-writing/clearing functions may also lock!
 class BlocksRingBuffer {
   // Near-infinite index type, not expecting overflow.
   using Index = uint64_t;
@@ -126,7 +126,7 @@ class BlocksRingBuffer {
     Index mBlockIndex;
   };
 
-  // Constructors with no deleter, the oldest entries will be silently
+  // Constructors with no entry destructor, the oldest entries will be silently
   // overwritten/destroyed.
 
   // Create a buffer of the given length.
@@ -141,43 +141,48 @@ class BlocksRingBuffer {
   BlocksRingBuffer(Buffer::Byte* aExternalBuffer, PowerOfTwo<Length> aLength)
       : mBuffer(aExternalBuffer, aLength) {}
 
-  // Constructors with a deleter, which will be called with an `EntryReader`
-  // before the oldest entries get overwritten/destroyed.
-  // Note that this deleter may be invoked from another caller's function that
-  // writes/deletes data, be aware of this re-entrancy! (Details above class.)
+  // Constructors with an entry destructor, which will be called with an
+  // `EntryReader` before the oldest entries get overwritten/destroyed.
+  // Note that this entry destructor may be invoked from another caller's
+  // function that writes/clears data, be aware of this re-entrancy! (Details
+  // above class.)
 
   // Create a buffer of the given length.
-  template <typename Deleter>
-  explicit BlocksRingBuffer(PowerOfTwo<Length> aLength, Deleter&& aDeleter)
-      : mBuffer(aLength), mDeleter(std::forward<Deleter>(aDeleter)) {}
+  template <typename EntryDestructor>
+  explicit BlocksRingBuffer(PowerOfTwo<Length> aLength,
+                            EntryDestructor&& aEntryDestructor)
+      : mBuffer(aLength),
+        mEntryDestructor(std::forward<EntryDestructor>(aEntryDestructor)) {}
 
   // Take ownership of an existing buffer.
-  template <typename Deleter>
+  template <typename EntryDestructor>
   explicit BlocksRingBuffer(UniquePtr<Buffer::Byte[]> aExistingBuffer,
-                            PowerOfTwo<Length> aLength, Deleter&& aDeleter)
+                            PowerOfTwo<Length> aLength,
+                            EntryDestructor&& aEntryDestructor)
       : mBuffer(std::move(aExistingBuffer), aLength),
-        mDeleter(std::forward<Deleter>(aDeleter)) {}
+        mEntryDestructor(std::forward<EntryDestructor>(aEntryDestructor)) {}
 
   // Use an externally-owned buffer.
-  template <typename Deleter>
+  template <typename EntryDestructor>
   explicit BlocksRingBuffer(Buffer::Byte* aExternalBuffer,
-                            PowerOfTwo<Length> aLength, Deleter&& aDeleter)
+                            PowerOfTwo<Length> aLength,
+                            EntryDestructor&& aEntryDestructor)
       : mBuffer(aExternalBuffer, aLength),
-        mDeleter(std::forward<Deleter>(aDeleter)) {}
+        mEntryDestructor(std::forward<EntryDestructor>(aEntryDestructor)) {}
 
-  // Destructor explictly deletes all remaining entries, this may invoke the
-  // caller-provided deleter.
-  ~BlocksRingBuffer() { DeleteAllEntries(); }
+  // Destructor explictly destroys all remaining entries, this may invoke the
+  // caller-provided entry destructor.
+  ~BlocksRingBuffer() { DestroyAllEntries(); }
 
   // Buffer length, constant. No need for locking.
   PowerOfTwo<Length> BufferLength() const { return mBuffer.BufferLength(); }
 
-  // Number of pushed and deleted entries. Live entries = pushed - deleted.
+  // Number of pushed and cleared entries. Live entries = pushed - cleared.
   // Note that these may change right after this thread-safe call, so they
   // should only be used for statistical purposes.
-  Pair<uint64_t, uint64_t> GetPushedAndDeletedCounts() const {
+  Pair<uint64_t, uint64_t> GetPushedAndClearedCounts() const {
     RBAutoLock lock(*this);
-    return {mPushedBlockCount, mDeletedBlockCount};
+    return {mPushedBlockCount, mClearedBlockCount};
   }
 
   // Iterator-like class used to read from an entry.
@@ -236,7 +241,7 @@ class BlocksRingBuffer {
         mRing->AssertBlockIndexIsValid(aBlockIndex);
         return Some(EntryReader(*mRing, aBlockIndex));
       }
-      // Block has been overwritten/deleted.
+      // Block has been overwritten/cleared.
       return Nothing();
     }
 
@@ -459,7 +464,7 @@ class BlocksRingBuffer {
         mRing->AssertBlockIndexIsValid(aBlockIndex);
         return Some(EntryReader(*mRing, aBlockIndex));
       }
-      // Block has been overwritten/deleted.
+      // Block has been overwritten/cleared.
       return Nothing();
     }
 
@@ -522,13 +527,13 @@ class BlocksRingBuffer {
              Index(mRing->mFirstReadIndex) + mRing->BufferLength().Value()) {
         // About to trample on an old block.
         EntryReader reader = mRing->ReaderInBlockAt(mRing->mFirstReadIndex);
-        // Call provided deleter for that entry.
-        if (mRing->mDeleter) {
-          mRing->mDeleter(reader);
+        // Call provided entry destructor for that entry.
+        if (mRing->mEntryDestructor) {
+          mRing->mEntryDestructor(reader);
         }
-        mRing->mDeletedBlockCount += 1;
+        mRing->mClearedBlockCount += 1;
         MOZ_ASSERT(reader.CurrentIndex() <= Index(reader.NextBlockIndex()));
-        // Move the buffer reading start past this deleted block.
+        // Move the buffer reading start past this cleared block.
         mRing->mFirstReadIndex = reader.NextBlockIndex();
       }
       mRing->mPushedBlockCount += 1;
@@ -569,7 +574,7 @@ class BlocksRingBuffer {
         mRing->AssertBlockIndexIsValid(aBlockIndex);
         return Some(EntryReader(*mRing, aBlockIndex));
       }
-      // Block has been overwritten/deleted.
+      // Block has been overwritten/cleared.
       return Nothing();
     }
 
@@ -630,17 +635,16 @@ class BlocksRingBuffer {
     return Put([&](EntryReserver aER) { return aER.WriteObject<T>(aOb); });
   }
 
-  // Delete all entries, calling deleter (if any).
+  // Clear all entries, calling entry destructor (if any), and move read index
+  // to the end so that these entries cannot be read anymore.
   void Clear() {
     RBAutoLock lock(*this);
-    DeleteAllEntries();
-    // Move read index to write index, so there's effectively no more entries.
-    // (Not setting both to 0, in case user is keeping BlockIndex'es to old
-    // entries.)
-    mFirstReadIndex = mNextWriteIndex;
+    ClearAllEntries();
   }
 
-  // Delete all entries strictly before aBlockIndex, calling deleter (if any).
+  // Clear all entries strictly before aBlockIndex, calling calling entry
+  // destructor (if any), and move read index to the end so that these entries
+  // cannot be read anymore.
   void ClearBefore(BlockIndex aBlockIndex) {
     RBAutoLock lock(*this);
     // Don't accept a not-yet-written index. One-past-the-end is ok.
@@ -651,27 +655,28 @@ class BlocksRingBuffer {
     }
     if (aBlockIndex == mNextWriteIndex) {
       // Right past the end, just clear everything.
-      Clear();
+      ClearAllEntries();
+      return;
     }
-    // Otherwise we need to delete a subset of entries.
+    // Otherwise we need to clear a subset of entries.
     AssertBlockIndexIsValid(aBlockIndex);
-    if (mDeleter) {
-      // We have a deleter, delete entries before aBlockIndex.
+    if (mEntryDestructor) {
+      // We have an entry destructor, destroy entries before aBlockIndex.
       Reader reader(*this);
       BlockIterator it = reader.begin();
       for (; it.CurrentBlockIndex() < aBlockIndex; ++it) {
         MOZ_ASSERT(it.CurrentBlockIndex() < reader.end().CurrentBlockIndex());
-        mDeleter(*it);
-        mDeletedBlockCount += 1;
+        mEntryDestructor(*it);
+        mClearedBlockCount += 1;
       }
       MOZ_ASSERT(it.CurrentBlockIndex() == aBlockIndex);
     } else {
-      // No deleter, just count skipped entries.
+      // No entry destructor, just count skipped entries.
       Reader reader(*this);
       BlockIterator it = reader.begin();
       for (; it.CurrentBlockIndex() < aBlockIndex; ++it) {
         MOZ_ASSERT(it.CurrentBlockIndex() < reader.end().CurrentBlockIndex());
-        mDeletedBlockCount += 1;
+        mClearedBlockCount += 1;
       }
       MOZ_ASSERT(it.CurrentBlockIndex() == aBlockIndex);
     }
@@ -734,13 +739,26 @@ class BlocksRingBuffer {
     return EntryReader(*this, aBlockIndex);
   }
 
-  // Call deleter (if any) on all entries.
-  void DeleteAllEntries() {
-    if (mDeleter) {
-      // We have a deleter, delete all the things!
-      Reader(*this).ForEach([this](EntryReader aReader) { mDeleter(aReader); });
+  // Call entry destructor (if any) on all entries.
+  // Note: The read index is not moved; this should only be called from the
+  // destructor or ClearAllEntries.
+  void DestroyAllEntries() {
+    if (mEntryDestructor) {
+      // We have an entry destructor, destroy all the things!
+      Reader(*this).ForEach(
+          [this](EntryReader aReader) { mEntryDestructor(aReader); });
     }
-    mDeletedBlockCount = mPushedBlockCount;
+    mClearedBlockCount = mPushedBlockCount;
+  }
+
+  // Clear all entries, calling entry destructor (if any), and move read index
+  // to the end so that these entries cannot be read anymore.
+  void ClearAllEntries() {
+    DestroyAllEntries();
+    // Move read index to write index, so there's effectively no more entries
+    // that can be read. (Not setting both to 0, in case user is keeping
+    // `BlockIndex`'es to old entries.)
+    mFirstReadIndex = mNextWriteIndex;
   }
 
   // Thin shell around mozglue PlatformMutex, for Base Profiler internal use.
@@ -771,18 +789,18 @@ class BlocksRingBuffer {
 
   // Underlying circular byte buffer.
   Buffer mBuffer;
-  // Index to the first block to be read (or deleted). Initialized to 1 because
+  // Index to the first block to be read (or cleared). Initialized to 1 because
   // 0 is reserved for the "empty" BlockIndex value.
   BlockIndex mFirstReadIndex = BlockIndex(Index(1));
   // Index where the next new block should be allocated. Initialized to 1
   // because 0 is reserved for the "empty" BlockIndex value.
   BlockIndex mNextWriteIndex = BlockIndex(Index(1));
   // If set, function to call for each entry that is about to be destroyed.
-  std::function<void(EntryReader)> mDeleter;
+  std::function<void(EntryReader)> mEntryDestructor;
 
   // Statistics.
   uint64_t mPushedBlockCount = 0;
-  uint64_t mDeletedBlockCount = 0;
+  uint64_t mClearedBlockCount = 0;
 };
 
 }  // namespace mozilla
